<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/action_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_kill_light"
        android:orderInCategory="100"
        android:title="@string/action_kill_light"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_moonlight"
        android:orderInCategory="100"
        android:title="@string/action_moonlight"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
